CSHRCP-925 - Added new endpoint to create or update a vacancy.
