# vcm/src/main/java/uk/gov/cshr/vcm/controller/exception/VacancyRestResponseExceptionHandler.java
@@ -7,8 +7,10 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
+import uk.gov.cshr.error.CSHRServiceStatus;
 
 @ControllerAdvice
 public class VacancyRestResponseExceptionHandler extends ResponseEntityExceptionHandler {
@@ -19,6 +21,14 @@ public class VacancyRestResponseExceptionHandler extends ResponseEntityException
     public ResponseEntity<Object> handleLocationServiceException(VacancyException ex, WebRequest request) {
         log.error(ex.getMessage(), ex);
         return handleExceptionInternal(ex, ex.getVacancyError(), new HttpHeaders(), ex.getVacancyError().getStatus(), request);
+    }
+
+    @ExceptionHandler({InvalidApplicantTrackingSystemException.class})
+    @ResponseBody
+    public CSHRServiceStatus handleInvalidAtsException(InvalidApplicantTrackingSystemException ex, WebRequest request) {
+        log.error(ex.getCshrServiceStatus().getSummary(), ex);
+
+        return ex.getCshrServiceStatus();
     }
 
     @ExceptionHandler({RuntimeException.class})
